-------------------------------------------------------------------------------
Changes in version 1.018

- Added missing crypto/surf.h and unix/selfpipe.h headers to insthier.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.017

- Added SURF (Simple Unpredictable Random Function) from the algorithm
  described in http://cr.yp.to/papers/surf.ps

- Added str_catns, str_copyns, and obuf_putns functions that take a
  variable number of char* parameters.

- Fixed utoa to write into its buffer instead of before it.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.016

- Fixed socket_notcpdelay on FreeBSD 4.x (and possibly other BSDs).

- Added back the definition of socket_tcp and socket_udp, the omission
  of which broke linking with libraries compiled against older bglibs.

- Added functions for querying UCSPI environment variables.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.015

- Added a "libbg.a" build target, including all the other libraries that
  don't define a main routine (like cli).

- Added set of str_splice functions, to insert one string into another.

- Added IPv6 address parsing/formatting and network functions.

- Added a library of number formatting routines.

- Modifed str_subst to return a count of substitutions.

- Added str_xlate function.

- Added socket connect functions with a timeout.

- Added ibuf_readall, ibuf_openreadclose, ibuf_copytofd, and
  obuf_copyfromfd.

- Added resolve_ipv4name_n, to resolve a name to more than one IP.
