@@ -1,0 +1,2 @@
+/* sysdep: +hasmkfifo */
+#define HASMKFIFO 1
